<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_grey"
        android:padding="8dp"
        android:shrinkColumns="*"
        android:stretchColumns="1,2"
        tools:context=".InfoFragment">

        <!--            - CHARACTERISTICS -            -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textCharacteristics"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_span="3"
                android:gravity="bottom|start"
                android:padding="8dp"
                android:text="@string/characteristics"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textSpecies"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/species"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textSpeciesContent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_span="2"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="4dp"
                android:textAlignment="center"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textBinName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/binName"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textBinNameContent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_span="2"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="4dp"
                android:textAlignment="center"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textConsStatus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/consStatus"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textConsStatusContent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_span="2"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="4dp"
                android:textAlignment="center"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textDiet"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/diet"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textDietContent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_span="2"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="4dp"
                android:textAlignment="center"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textNatHabitat"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/natHabitat"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textNatHabitatContent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_span="2"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="4dp"
                android:textAlignment="center"
                android:textSize="16sp" />
        </TableRow>

        <!--            - LIFECYCLE -            -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textLifecycle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_span="3"
                android:gravity="bottom|start"
                android:lines="2"
                android:padding="8dp"
                android:text="@string/lifecycle"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textNumOffspring"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/numOffspring"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textNumOffspringContent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_span="2"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="4dp"
                android:textAlignment="center"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textAgeMaturity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/ageMaturity"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textAgeMaturityContent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_span="2"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="4dp"
                android:textAlignment="center"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textGestPeriod"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/gestPeriod"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textGestPeriodContent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_span="2"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="4dp"
                android:textAlignment="center"
                android:textSize="16sp" />
        </TableRow>

        <!--            - AVERAGES -            -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textAverages"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_span="3"
                android:gravity="bottom|start"
                android:lines="2"
                android:padding="8dp"
                android:text="@string/averages"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textSize"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/size"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textSizeFContent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="4dp"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textSizeMContent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="4dp"
                android:textAlignment="center"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textLifeExp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/lifeExp"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textLifeExpFContent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="4dp"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textLifeExpMContent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="4dp"
                android:textAlignment="center"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textWeight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/weight"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textWeightFContent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="4dp"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textWeightMContent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="4dp"
                android:textAlignment="center"
                android:textSize="16sp" />
        </TableRow>
    </TableLayout>
</androidx.core.widget.NestedScrollView>